--- a/malicious_url_detection.ipynb
+++ b/malicious_url_detection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -68,27 +68,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>99995</th>\n",
-       "      <td>http://allgxrltogaparty.co.uk/gallery2/maxn.ph...</td>\n",
+       "      <td>http://allgorltogaparty.co.ik/gallery2/maon.ph...</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99996</th>\n",
-       "      <td>http://3401.e-prxntphoto.co.uk/thxsxsessex/xnd...</td>\n",
+       "      <td>http://3401.e-prontphoto.co.ik/thososessex/ond...</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99997</th>\n",
-       "      <td>http://acard4u.co.uk/product_xnfo.php?cPath=10...</td>\n",
+       "      <td>http://acard4i.co.ik/prodict_onfo.php?cPath=10...</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99998</th>\n",
-       "      <td>http://aboutscotland.co.uk/ecosse/portessxe/xn...</td>\n",
+       "      <td>http://aboitscotland.co.ik/ecosse/portessoe/on...</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99999</th>\n",
-       "      <td>http://allxanceleague.co.uk/cgx-bxn/phpBB2/vxe...</td>\n",
+       "      <td>http://alloanceleagie.co.ik/cgo-bon/phpBB2/voe...</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -97,21 +97,21 @@
       ],
       "text/plain": [
        "                                                     url  Label\n",
-       "99995  http://allgxrltogaparty.co.uk/gallery2/maxn.ph...      4\n",
-       "99996  http://3401.e-prxntphoto.co.uk/thxsxsessex/xnd...      4\n",
-       "99997  http://acard4u.co.uk/product_xnfo.php?cPath=10...      4\n",
-       "99998  http://aboutscotland.co.uk/ecosse/portessxe/xn...      4\n",
-       "99999  http://allxanceleague.co.uk/cgx-bxn/phpBB2/vxe...      4"
+       "99995  http://allgorltogaparty.co.ik/gallery2/maon.ph...      4\n",
+       "99996  http://3401.e-prontphoto.co.ik/thososessex/ond...      4\n",
+       "99997  http://acard4i.co.ik/prodict_onfo.php?cPath=10...      4\n",
+       "99998  http://aboitscotland.co.ik/ecosse/portessoe/on...      4\n",
+       "99999  http://alloanceleagie.co.ik/cgo-bon/phpBB2/voe...      4"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Reading data from csv file\n",
-    "data = pd.read_csv(\"FinalDataIX.csv\")\n",
+    "data = pd.read_csv(\"FinalDataIni.csv\")\n",
     "data.tail()"
    ]
   },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "Name: url, dtype: object"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -283,7 +283,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of our model is:  0.99\n"
+      "Accuracy of our model is:  0.9896\n"
      ]
     }
    ],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,14 +329,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of our model is:  0.9127\n"
+      "Accuracy of our model is:  0.79938\n"
      ]
     }
    ],
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,14 +503,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of our model is:  0.93936\n"
+      "Accuracy of our model is:  0.84316\n"
      ]
     }
    ],
@@ -522,7 +522,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Information extraction"
+    "## Adjacent Swap"
    ]
   },
   {
@@ -534,13 +534,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "url_list_key = []\n",
     "for i in range(len(url_list)):\n",
-    "    url_list_key.append(url_list[i].replace(\"http://\",'').replace(\"https://\",''))"
+    "    url_list_key.append(url_list[i].replace(\"https\",''))"
    ]
   },
   {
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,14 +657,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of our model is:  0.91092\n"
+      "Accuracy of our model is:  0.7981\n"
      ]
     }
    ],
@@ -676,35 +676,378 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Assemble weak defenses"
+    "## Purturbation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_list_pur = []\n",
+    "for i in range(len(url_list)):\n",
+    "    url_list_pur.append(url_list[i].replace(\"i\",'u'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using Tokenizer\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "\n",
+    "# Store vectors into X variable as Our XFeatures\n",
+    "X_pur = vectorizer.fit_transform(url_list_pur)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_pur_ini = X_pur[0]\n",
+    "for i in range(49999):\n",
+    "    ele = X_pur[i + 1]\n",
+    "    X_pur_ini = vstack((X_pur_ini, ele))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pur_ini = y_initial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_pur_attack = X_pur[50000]\n",
+    "for i in range(50000,99999):\n",
+    "    ele = X_pur[i + 1]\n",
+    "    X_pur_attack = vstack((X_pur_attack, ele))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pur_attack = y_initial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\samzhang\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:764: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Model Building using logistic regression\n",
+    "logit_pur = LogisticRegression()\n",
+    "logit_pur.fit(X_pur_ini, y_pur_ini)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "InfoEx [1]\n",
-      "Reverse [1]\n"
+      "Accuracy of our model is:  0.91164\n"
      ]
     }
    ],
    "source": [
-    "print(\"InfoEx\",logit.predict(X_key_a[100000]))\n",
-    "      \n",
-    "print(\"Reverse\",logit.predict(X_key_a[100000]))"
+    "print(\"Accuracy of our model is: \",logit_pur.score(X_pur_attack, y_pur_attack))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Reading data from csv file\n",
+    "data_gan = pd.read_csv(\"FinalDataGan.csv\")\n",
+    "\n",
+    "# Features\n",
+    "url_gan = data_gan[\"url\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using Tokenizer\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "\n",
+    "# Store vectors into X variable as Our XFeatures\n",
+    "X_gan = vectorizer.fit_transform(url_gan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_gan_ini = X_gan[0]\n",
+    "for i in range(49999):\n",
+    "    ele = X_gan[i + 1]\n",
+    "    X_gan_ini = vstack((X_gan_ini, ele))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_gan_ini = y_initial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_gan_attack = X_gan[50000]\n",
+    "for i in range(50000,99999):\n",
+    "    ele = X_gan[i + 1]\n",
+    "    X_gan_attack = vstack((X_gan_attack, ele))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_gan_attack = y_initial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\samzhang\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:764: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Model Building using logistic regression\n",
+    "logit_gan = LogisticRegression()\n",
+    "logit_gan.fit(X_gan_ini, y_gan_ini)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of our model is:  0.8531\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy of our model is: \",logit_gan.score(X_gan_attack, y_gan_attack))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Assemble weak defenses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "InfoEx [0]\n",
+      "Reverse [0]\n",
+      "Ini [0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"InfoEx\",logit_key.predict(X_key_attack[0]))\n",
+    "      \n",
+    "print(\"Reverse\",logit_reverse.predict(X_reverse_attack[0]))\n",
+    "\n",
+    "print(\"Ini\",logit_initial.predict(X_attack[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = []\n",
+    "for i in range(49999):\n",
+    "    result_count = [0,0,0,0,0]\n",
+    "    key_result = logit_key.predict(X_key_attack[i])[0]\n",
+    "    result_count[key_result] += 1\n",
+    "    gan_result = logit_gan.predict(X_gan_attack[i])[0]\n",
+    "    result_count[gan_result] += 1\n",
+    "    pur_result = logit_pur.predict(X_pur_attack[i])[0]\n",
+    "    result_count[pur_result] += 1\n",
+    "    temp = max(result_count)\n",
+    "    for j in range(5):\n",
+    "        if temp == result_count[j]:\n",
+    "            result.append(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "success = 0\n",
+    "for i in range(49999):\n",
+    "    if result[i] == y_initial[i]:\n",
+    "        success += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.865297305946119"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "success/49999"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result[49988]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43264"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "success"
+   ]
   }
  ],
  "metadata": {
