--- a/malicious_url_detection.ipynb
+++ b/malicious_url_detection.ipynb
@@ -166,13 +166,27 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<100000x73974 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 1285179 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Using Tokenizer\n",
     "vectorizer = TfidfVectorizer()\n",
     "\n",
     "# Store vectors into X variable as Our XFeatures\n",
-    "X = vectorizer.fit_transform(url_list)"
+    "X = vectorizer.fit_transform(url_list)\n",
+    "\n",
+    "X"
    ]
   },
   {
@@ -336,12 +350,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of our model is:  0.79938\n"
+      "Accuracy of our model with dataset of adversarial attack is:  0.79938\n"
      ]
     }
    ],
    "source": [
-    "print(\"Accuracy of our model is: \",logit_initial.score(X_attack, y_attack))"
+    "print(\"Accuracy of our model with dataset of adversarial attack is: \",logit_initial.score(X_attack, y_attack))"
    ]
   },
   {
@@ -510,26 +524,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of our model is:  0.84316\n"
+      "Accuracy of our model using reverse URL is:  0.84316\n"
      ]
     }
    ],
    "source": [
-    "print(\"Accuracy of our model is: \",logit_reverse.score(X_reverse_attack, y_reverse_attack))"
+    "print(\"Accuracy of our model using reverse URL is: \",logit_reverse.score(X_reverse_attack, y_reverse_attack))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Adjacent Swap"
+    "## Information Extraction"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Extract key information and trim irrelevant information."
+    "Extract key information and trim irrelevant information such as \"http\", \"https\" and \".com\""
    ]
   },
   {
@@ -540,7 +554,7 @@
    "source": [
     "url_list_key = []\n",
     "for i in range(len(url_list)):\n",
-    "    url_list_key.append(url_list[i].replace(\"https\",''))"
+    "    url_list_key.append(url_list[i].replace(\"https\",'').replace(\"http\",'').replace(\".com\",''))"
    ]
   },
   {
@@ -652,7 +666,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Show accuracy after extracting key information."
+    "Show accuracy after extracting key information. The accuracy is not promising and will not be used in the final framework."
    ]
   },
   {
@@ -664,7 +678,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of our model is:  0.7981\n"
+      "Accuracy of our model is:  0.78534\n"
      ]
     }
    ],
@@ -676,7 +690,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Purturbation"
+    "## Perturbation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Change some characters in the initial dataset and dataset after adversarial attack."
    ]
   },
   {
@@ -685,9 +706,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url_list_pur = []\n",
+    "url_list_per = []\n",
     "for i in range(len(url_list)):\n",
-    "    url_list_pur.append(url_list[i].replace(\"i\",'u'))"
+    "    url_list_per.append(url_list[i].replace(\"i\",'u'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tokenize data"
    ]
   },
   {
@@ -700,7 +728,7 @@
     "vectorizer = TfidfVectorizer()\n",
     "\n",
     "# Store vectors into X variable as Our XFeatures\n",
-    "X_pur = vectorizer.fit_transform(url_list_pur)"
+    "X_per = vectorizer.fit_transform(url_list_per)"
    ]
   },
   {
@@ -709,10 +737,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_pur_ini = X_pur[0]\n",
+    "X_per_ini = X_per[0]\n",
     "for i in range(49999):\n",
-    "    ele = X_pur[i + 1]\n",
-    "    X_pur_ini = vstack((X_pur_ini, ele))"
+    "    ele = X_per[i + 1]\n",
+    "    X_per_ini = vstack((X_per_ini, ele))"
    ]
   },
   {
@@ -721,7 +749,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pur_ini = y_initial"
+    "y_per_ini = y_initial"
    ]
   },
   {
@@ -730,10 +758,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_pur_attack = X_pur[50000]\n",
+    "X_per_attack = X_per[50000]\n",
     "for i in range(50000,99999):\n",
-    "    ele = X_pur[i + 1]\n",
-    "    X_pur_attack = vstack((X_pur_attack, ele))"
+    "    ele = X_per[i + 1]\n",
+    "    X_per_attack = vstack((X_per_attack, ele))"
    ]
   },
   {
@@ -742,7 +770,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pur_attack = y_initial"
+    "y_per_attack = y_initial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train the model using logistic regression"
    ]
   },
   {
@@ -777,8 +812,15 @@
    ],
    "source": [
     "# Model Building using logistic regression\n",
-    "logit_pur = LogisticRegression()\n",
-    "logit_pur.fit(X_pur_ini, y_pur_ini)"
+    "logit_per = LogisticRegression()\n",
+    "logit_per.fit(X_per_ini, y_per_ini)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The accuracy increases and the method might be applicable so will be accepted in the final framework"
    ]
   },
   {
@@ -795,7 +837,7 @@
     }
    ],
    "source": [
-    "print(\"Accuracy of our model is: \",logit_pur.score(X_pur_attack, y_pur_attack))"
+    "print(\"Accuracy of our model is: \",logit_per.score(X_per_attack, y_per_attack))"
    ]
   },
   {
@@ -803,6 +845,13 @@
    "metadata": {},
    "source": [
     "## Gan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uses the generator of GAN to alter our dataset and store them in another file \"FinalDataGan.csv\"."
    ]
   },
   {
@@ -918,12 +967,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of our model is:  0.8531\n"
+      "Accuracy of our model using GAN is:  0.8531\n"
      ]
     }
    ],
    "source": [
-    "print(\"Accuracy of our model is: \",logit_gan.score(X_gan_attack, y_gan_attack))"
+    "print(\"Accuracy of our model using GAN is: \",logit_gan.score(X_gan_attack, y_gan_attack))"
    ]
   },
   {
@@ -934,31 +983,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 46,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "InfoEx [0]\n",
-      "Reverse [0]\n",
-      "Ini [0]\n"
-     ]
-    }
-   ],
    "source": [
-    "print(\"InfoEx\",logit_key.predict(X_key_attack[0]))\n",
-    "      \n",
-    "print(\"Reverse\",logit_reverse.predict(X_reverse_attack[0]))\n",
-    "\n",
-    "print(\"Ini\",logit_initial.predict(X_attack[0]))"
+    "Uses each weak defense to predict separately first and use voting to decide final result. Store these result in a list \"result\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,8 +1002,8 @@
     "    result_count[key_result] += 1\n",
     "    gan_result = logit_gan.predict(X_gan_attack[i])[0]\n",
     "    result_count[gan_result] += 1\n",
-    "    pur_result = logit_pur.predict(X_pur_attack[i])[0]\n",
-    "    result_count[pur_result] += 1\n",
+    "    per_result = logit_per.predict(X_per_attack[i])[0]\n",
+    "    result_count[per_result] += 1\n",
     "    temp = max(result_count)\n",
     "    for j in range(5):\n",
     "        if temp == result_count[j]:\n",
@@ -978,8 +1011,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compare the result got with initial label."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,63 +1030,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The final accuaracy increases to 85.61%"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.865297305946119"
+       "0.8560771215424309"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "success/49999"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result[49988]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "43264"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "success"
    ]
   }
  ],
